--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
       "es2018",
       "dom"
     ],
-    "types": ["node","jest"]
+    "types": ["node","jasmine"]
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
